--- a/1第一阶段/1-00【Java基础2】.md
+++ b/1第一阶段/1-00【Java基础2】.md
@@ -77,7 +77,44 @@ public class Game {
 
 > static 关键字，可以修饰变量、方法和代码块。在使用的过程中，其主要目的还是想在不创建对象的情况 下，去调用方法。下面将介绍两个工具类，来体现static 方法的便利。
 
-## 1.2 abstract
+## 1.2 瞬态关键字
+
+transient关键字：瞬态关键字。被transient 修饰的成员变量不能被序列化的，但是它却没有static的作用，只是能够避免序列化
+
+一个对象要想要序列化，必须要满足两个条件：
+
+* 该类必须实现`java.io.Serializable`接口，`Serializable`是一个标记接口，不实现此接口的类将不会使任何状态序列化或者反序列化，会抛出`NotSerializableException`。
+
+* 该类的所有竖向必须是可序列化的。如果有一个属性不需要可序列化的，则该属性必须注明是瞬态的，使用`transient`关键字修饰。
+
+  static关键字：静态关键字。静态关键优先于非静态加载到内存中（静态优先于对象进入到内存中），	被static 修饰的成员变量不能被序列化的，序列化的都是对象。
+
+  transient关键字：瞬态关键字。被transient 修饰的成员变量不能被序列化的，但是它却没有static的作用，只是能够避免序列化
+
+```java
+public class Demo01ObjectOutputStream {
+    public static void main(String[] args) throws IOException {
+        // 1.创建ObjcetOutputStream对象，构造方法中传递字节输出流
+        ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("10_IO\\oos.txt"));
+        // 2.使用ObjectOutputStream对象中的方法writeObject，把对象写入到文件中
+        oos.writeObject(new Person("小仙女", 19));
+        // 3.释放资源
+        oos.close();
+    }
+}
+```
+
+```java
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class Person implements Serializable {
+    private String name;
+    private int age;
+}
+```
+
+## 1.3 abstract
 
 父类中的方法，被它的子类们重写，子类各自的实现都不尽相同。那么父类的方法声明和方法主体，只有声明还有意义，而方法主体则没有存在的意义了。我们把没有方法主体的方法称为抽象方法。Java语法规定，包含抽象方法的类就是抽象类。
 
@@ -128,7 +165,7 @@ public class CatTest {
 4. 抽象类的子类，必须重写抽象父类中所有的抽象方法，否则，编译无法通过而报错。除非该子类也是抽象类。
 5. 抽象类不能使用final修饰，final修饰的类不能被继承
 
-## 1.3 interface
+## 1.4 interface
 
 接口，是Java语言中一种引用类型，是方法的集合，如果说类的内部封装了成员变量、构造方法和成员方法，那么接口的内部主要就是封装了方法，包含抽象方法（JDK 7及以前），默认方法和静态方法（JDK 8），私有方法（JDK 9）。
 
@@ -189,7 +226,7 @@ public interface 接口名称 {
   }
   ```
 
-### 1.3.1 基本的实现
+### 1.4.1 基本的实现
 
 类与接口的关系为实现关系，即类实现接口，该类可以称为接口的实现类，也可以称为接口的子类。实现的动作类似继承，格式相仿，只是关键字不同，实现使用 `implements` 关键字。
 
@@ -317,7 +354,7 @@ public interface LiveAble {
 }
 ```
 
-### 1.3.2 接口的多实现
+### 1.4.2 接口的多实现
 
 之前学过，在继承体系中，一个类只能继承一个父类。而对于接口而言，一个类是可以实现多个接口的，这叫做接口的多实现。并且，一个类能继承一个父类，同时实现多个接口。
 
@@ -389,7 +426,7 @@ public class C implements A,B{
 
 接口中，存在同名的静态方法并不会冲突，原因是只能通过各自接口名访问静态方法。
 
-### 1.3.3 接口多实现优先级
+### 1.4.3 接口多实现优先级
 
 当一个类，既继承一个父类，又实现若干个接口时，父类中的成员方法与接口中的默认方法重名，子类就近选择执行父类的成员方法。代码如下：
 
@@ -424,7 +461,7 @@ public class Test {
 }
 ```
 
-### 1.3.4 接口多继承
+### 1.4.4 接口多继承
 
 一个接口能继承另一个或者多个接口，这和类之间的继承比较相似。接口的继承使用 `extends` 关键字，子接口继承父接口的方法。如果父接口中的默认方法有重名的，那么子接口需要重写一次。代码如下：
 
@@ -453,7 +490,7 @@ interface D extends A,B{
 - 子接口重写默认方法时，default关键字可以保留。
 - 子类重写默认方法时，default关键字不可以保留。
 
-### 1.3.5 接口特点
+### 1.4.5 接口特点
 
 - 接口中，无法定义成员变量，但是可以定义常量，其值不可以改变，默认使用public static final修饰。
 - 接口中，没有构造方法，不能创建对象。
@@ -464,7 +501,7 @@ interface D extends A,B{
 - 接口中定义的方法，默认是`public abstract`修饰的抽象方法
 - 接口中定义的内部类，默认是`public static`修饰的静态内部类
 
-### 1.3.6 抽象类和接口的区别
+### 1.4.6 抽象类和接口的区别
 
 相同点：
 
@@ -478,7 +515,7 @@ interface D extends A,B{
 3. 抽象类只能单继承，接口可以多继承
 4. 抽象类可以定义各种类型的成员变量，接口中只能是`public static final`修饰的静态常量
 
-## 1.4 final
+## 1.5 final
 
 子类可以在父类的基础上改写父类内容，比如，方法重写。那么我们能不能随意的继承API中提供的类，改写其内容呢？显然这是不合适的。为了避免这种随意改写的情况，Java提供了 `final` 关键字，用于修饰不可改变内容。
 
@@ -488,7 +525,7 @@ final： 不可改变。可以用于修饰类、方法和变量。
 - 方法：被修饰的方法，不能被重写。
 - 变量：被修饰的变量，不能被重新赋值。
 
-### 1.4.1 修饰类
+### 1.5.1 修饰类
 
 ```java
 final class 类名 {
@@ -497,7 +534,7 @@ final class 类名 {
 
 查询API发现像 `public final class String` 、 `public final class Math` 、 `public final class Scanner`等，很多我们学习过的类，都是被final修饰的，目的就是供我们使用，而不让我们所以改变其内容。
 
-### 1.4.2 修饰方法
+### 1.5.2 修饰方法
 
 ```java
 修饰符 final 返回值类型 方法名(参数列表){
@@ -507,7 +544,7 @@ final class 类名 {
 
 重写被 `final` 修饰的方法，编译时就会报错。
 
-### 1.4.3 修饰变量
+### 1.5.3 修饰变量
 
 * **局部变脸——基本类型**
   基本类型的局部变量，被final修饰后，只能赋值一次，不能再更改。代码如下：
@@ -591,7 +628,7 @@ final class 类名 {
 
 > 被final修饰的常量名称，一般都有书写规范，所有字母都大写。
 
-## 1.5 权限修饰符
+## 1.6 权限修饰符
 
 在Java中提供了四种访问权限，使用不同的访问权限修饰符修饰时，被修饰的内容会有不同的访问权限，
 
