--- a/1第一阶段/1-01【常用API】.md
+++ b/1第一阶段/1-01【常用API】.md
@@ -386,6 +386,26 @@ StringBuilder常用的方法有2个：
       }
   }
   ```
+  
+- 使用`System.setOut`方法改变输出语句的目的地改为参数中传递的打印流的目的地
+
+  `static void setOut(PrintStream out)`: 重新分配“标准输出流”。
+
+  ```java
+  public class Demo02PrintStream {
+      public static void main(String[] args) throws FileNotFoundException {
+          System.out.println("我是在控制台输出");
+  
+          PrintStream ps = new PrintStream("10_IO\\目的地打印流");
+          // 把输出语句的目的地改变Wie打印流的目的地。
+          System.setOut(ps);
+          System.out.println("打印流中输出");// 打印流中输出
+  
+          // 释放资源
+          ps.close();
+      }
+  }
+  ```
 
 # 第三章 日期时间类
 
@@ -815,173 +835,4 @@ public class Demo01Filter {
     }
 }
 ```
-
-# 第五章 属性集
-
-## 5.1 概述
-
-<!--P380-->
-
-<!--Properties 所有物; 财产; 财物; 不动产; 房地产; 房屋及院落; 庄园;-->
-
-<!--属性property-->
-
-`java.util.Properties`继承于`Hashtable`，来表示一个持久的属性集。它使用键值结构存储数据，每个键与其对应值都是一个字符串。该类也被许多java类使用，比如获取系统属性时，`System.getProperties`方法就是返回一个`Properties`对象。
-
-`java.util.Proterties`集合 extends `HashTable<k, v>` implements `Map<k, v>`
-
-`Properties`类表示了一个持久的属性集，`Properties`可保存在流中或从流中加载。
-
-`Properties`集合是一个唯一和IO流相结合的集合
-
-* 可以使用`Properties`集合中的方法`store`，把集合中的临时数据，持久化写入到硬盘中存储。
-* 可以使用`Properties`集合中的方法`load`，把硬盘中保存的文件(键值对)，读取到集合中使用。
-
-属性列表中每个键与其对应值都是一个字符串。
-
-`Properties`集合是一个双列集合，key和value默认都是字符串。
-
-## 5.2 Properties类
-
-### 构造方法
-
-* `public Properties()`: 创建一个空的属性列表。
-
-### 基本的存储方法
-
-* `public Object setProperty(String key, String value)`: 保存一对属性，等于调用Hashtable的方法put.
-* `public String getProperty(String key)`: 使用此属性列表中指定的键搜索属性值。通过key找到value值，此方法相当于Map集合中的get(key)方法。
-* `public Set<String> stringPropertyNames()`: 所有键的名称的集合。返回此属性列表中的键集，其中该键及其对应值是字符串，此方法相当于Map集合中的keySet方法。
-
-```java
-import java.util.Properties;
-import java.util.Set;
-
-public class Demo01Properties {
-    public static void main(String[] args) {
-        // 创建Properties集合对象
-        Properties prop = new Properties();
-        // 使用setProperty往集合中添加数据
-        prop.setProperty("迪丽热巴", "168");
-        prop.setProperty("古力娜扎", "165");
-        prop.setProperty("稀里哗啦", "169");
-
-        // 使用stringPropertyNames把Properties集合中的键取出，存储到一个set集合中
-        Set<String> set = prop.stringPropertyNames();
-        
-        // 遍历Set集合，取出Properties集合中的每一个键
-        for (String key : set) {
-            // 使用getProperty方法通过key获取value
-            String value = prop.getProperty(key);
-            System.out.println(key + " = " + value);
-
-        }
-    }
-}
-```
-
-#### store方法
-
-<!--P381-->
-
-可以使用`Properties`集合中的方法`store`，把集合中的临时数据，持久化写入到硬盘中存储。
-
-`void store(OutputStream out， String comments)` 字节输入流，不能使用中文
-
-`void store(Writer writer, String comments)` 字符输入流，可以使用中文
-
-参数：
-
-* `OutputStream out`：字符输出流，不能写入中文。
-
-* `Writer writer`：字符输出流，可以写中文
-
-* `String comments`：注释，用来解释说明保存的文件是做什么用的，在保存的文件中的第一行会显示。
-
-  不能使用中文，会乱码，因为计算机默认的是Unicode编码
-
-  一般使用“ ”空字符串
-
-使用步骤：
-
-1. 创建一个`Properties`集合对象，添加数据。
-2. 创建字节输出流/字符输出流对象，构造方法中绑定要输出的目的地。
-3. 使用`Properties`集合中的方法`store`，把集合中的临时数据，持久化写入到硬盘中存储。
-4. 释放资源。
-
-```java
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.util.Properties;
-
-public class Demo02Properties {
-    public static void main(String[] args) throws IOException {
-        // 1.创建Properties集合对象,添加数据
-        Properties prop = new Properties();
-        prop.setProperty("迪丽热巴", "168");
-        prop.setProperty("古力娜扎", "165");
-        prop.setProperty("稀里哗啦", "169");
-
-        // 可以使用中文
-/*        // 2. 创建字节输出流/字符输出流对象，构造方法中绑定要输出的目的地。
-        FileWriter fw = new FileWriter("09_IOAndProperties\\prop.txt");
-
-        // 3. 使用Properties集合中的方法store，把集合中的临时数据，持久化写入到硬盘中存储。
-        prop.store(fw, "save data");
-
-        // 4. 释放资源。
-        fw.close();*/
-
-        // 创建字节输出流对象，不用释放资源，因为匿名，所以直接会释放资源的
-        // 因为是字节输出流，并且不能使用中文，可是之前有中文，所以会出现乱码
-        prop.store(new FileOutputStream("09_IOAndProperties\\prop2.txt"), " ");
-    }
-}
-```
-
-#### load方法
-
-<!--P382-->
-
-可以使用`Properties`集合中的方法`load`，把硬盘中保存的文件(键值对)，读取到集合中使用。
-
-`void load(InputStream inStream)` 字节输入流，不能读取含有中文键值对的文件
-
-`void load(Reader reader)` 字符输入流，可以读取含有中文键值对的文件
-
-使用步骤：
-
-1. 创建`Properties`集合对象
-2. 使用`Properties`集合中的方法`load`读取保存键值对的文件
-3. 遍历`Properties`集合
-
-注意：
-
-* 存储键值对的文件中，键与值默认的连接符号可以使用=，空格（其他符号）。
-* 存储键值对的文件中，可以使用#进行注释，被注释的键值对不会再被读取。
-* 存储键值对的文件中，键与值默认都是字符串，不用再加引号
-
-```java
-import java.io.FileReader;
-import java.io.IOException;
-import java.util.Properties;
-import java.util.Set;
-
-public class Demo03Properties {
-    public static void main(String[] args) throws IOException {
-        // 创建Properties集合对象
-        Properties prop = new Properties();
-        // 使用Properties集合中的方法load读取保存键值对的文件
-        prop.load(new FileReader("09_IOAndProperties\\prop.txt"));
-        // 遍历Properties集合
-        Set<String> set = prop.stringPropertyNames();
-        for (String key : set) {
-            String value = prop.getProperty(key);
-            System.out.println(key + "=" + value);
-        }
-    }
-}
-```
-
-
 
