--- a/1第一阶段/1-14【反射、注解】.md
+++ b/1第一阶段/1-14【反射、注解】.md
@@ -141,6 +141,22 @@ public class Demo01 {
 }
 ```
 
+## 1.2 Class类
+
+![](D:\Java\笔记\图片\1-14【Junit单元测试、反射、注解】\3Class类结构图.png)
+
+特点如下：
+
+1. Class也是类，因此也继承Object类
+2. Class类对象不是new出来的，而是系统创建的。
+3. 对于某个类的Class类对象，在内存中只有一份，类只加载一次。
+4. 每个类的示例都会记得自己是由哪个Class实例所生成。
+5. 通过Class一系列API可以完整地得到一个类的完整结构。
+6. Class对象是存放在堆中的。
+7. 类的二进制字节码数据放在方法区中，JDK1.8对于方法区的实现是元空间。
+
+
+
 ## 1.2 获取Class对象
 
 一共有三种方式，这三种方式获取的Class对象都一样。同一个字节码文件(*.class)在一个程序运行过程中，只会被加载一次，不论通过哪一种方式获取的Class对象都是同一个。
@@ -171,11 +187,13 @@ public class Demo02 {
 }
 ```
 
-## 1.3 Class类
+## 1.3 Class类的方法
 
-![](D:\Java\笔记\图片\1-14【Junit单元测试、反射、注解】\3Class类结构图.png)
-
-## 1.3 Class对象的方法
+* `static Class<?> forName(String className)` ：返回与给定字符串名称的类或接口相关联的Class对象。 
+* `Object newInstance()`：创建由此Class对象表示的类的新实例。 
+* `Class[] getInterfaces()`  ：确定由该Class对象表示的类或接口实现的接口。 
+* `ClassLoader getClassLoader()`：返回该类的类加载器
+* `Class getSuperClass()`：返回表示此Class所表示的实体的超类的Class
 
 ### 1.3.1 获取成员变量
 
@@ -364,8 +382,6 @@ public class Demo05Reflect {
     }
 }
 ```
-
-
 
 ## 1.4 反射调用优化
 
