--- a/1-Java基础/1-06【并发-多线程】.md
+++ b/1-Java基础/1-06【并发-多线程】.md
@@ -690,7 +690,7 @@ public class Demo02 {
 
 sleep 不释放锁、释放cpu。join 释放锁、抢占cpu。yiled 不释放锁、释放cpu。wait 释放锁、释放cpu。
 
-## 2.4 终止模式
+## 2.4 两阶段终止模式
 
 终止模式之两阶段终止模式Two Phase Termination，就是考虑在一个线程T1中如何优雅地终止另一个线程T2。这里的优雅指的是给T2一个料理后事的机会（如释放锁）。
 
@@ -926,560 +926,108 @@ public class Demo01 {
 08:07:24.120 [main] DEBUG com.linxuan.demo01.Demo01 - t6 state: BLOCKED
 ```
 
-# 第三章 共享模型之管程
+## 2.8 线程状态转换详解
 
-- 一个程序运行多线程本身是没有问题的
+![](D:\Java\笔记\图片\1-06【并发】\1-5线程6种状态.png)
 
-- 问题出现在多个线程共享资源的时候。多个线程同时对共享资源进行读操作本身也没有问题，但是多个线程对共享资源同时进行读写操作时就有问题了
+假设有线程 `Thread t`
 
+**情况 1：`NEW --> RUNNABLE`**
 
-**临界区**：一段代码内如果存在对共享资源的多线程读写操作，那么称这段代码为临界区。
+* 当调用 `t.start()` 方法时，由 `NEW --> RUNNABLE`。
 
-```java
-static int counter = 0;
+**情况 2：`RUNNABLE <--> WAITING`**
 
-static void increment()
-// 临界区
-{
-    counter++;
-}
-static void decrement()
-// 临界区
-{
-    counter--;
-}
-```
+* t 线程用 `synchronized(obj)` 获取了对象锁后
 
-**竞态条件**：多个线程在临界区执行，那么由于代码指令的执行不确定而导致的结果问题，称为竞态条件。
+  调用 `obj.wait()` 方法时，t 线程从 `RUNNABLE --> WAITING`
 
-## 3.1 线程安全问题
+  调用 `obj.notify()` ， `obj.notifyAll()` ， `t.interrupt()` 时
 
-线程出现问题的根本原因是因为线程上下文切换，导致线程里的指令没有执行完就切换执行其它线程了，下面举一个例子：
-
-```java
-public class Demo01 {
-    static int count = 0;
-    public static void main(String[] args) throws InterruptedException {
-        Thread t1 = new Thread(() -> {
-            for (int i = 0; i < 5000; i++) {
-                count++;
-            }
-        });
-
-        Thread t2 = new Thread(() -> {
-            for (int i = 0; i < 5000; i++) {
-                count--;
-            }
-        });
-
-        t1.start();
-        t2.start();
-        // 等待t1和t2线程运行完之后再打印count结果值
-        t1.join();
-        t2.join();
-        System.out.println("count: " + count);
-    }
-}
-```
-
-两个线程对初始值为 0 的静态变量一个做自增，一个做自减，各做 5000 次，结果是 0 吗？以上的结果可能是正数、负数、零。为什么呢？因为 Java 中对静态变量的自增，自减并不是原子操作。
-
-例如对于 `i++` 而言（i 为静态变量），实际会产生如下的 JVM 字节码指令：
-
-```java
-getstatic i 				// 获取静态变量i的值
-iconst_1 					// 准备常量1
-iadd 						// 加法
-putstatic i 				// 将修改后的值存入静态变量i
-```
-
-而对应 `i--` 也是类似：
-
-```java
-getstatic i 				// 获取静态变量i的值
-iconst_1 					// 准备常量1
-isub					 	// 减法
-putstatic i 				// 将修改后的值存入静态变量i
-```
-
-而 Java 的内存模型如下，完成静态变量的自增，自减需要在主存和线程内存中进行数据交换：
-
-![](D:\Java\笔记\图片\1-06【并发】\1-6-3.png)
-
-如果是单线程以上 8 行代码是顺序执行（不会交错）没有问题：
-
-```java
-// 假设i的初始值为0
-getstatic i 		// 线程1-获取静态变量i的值 线程内i=0
-iconst_1 			// 线程1-准备常量1
-iadd 				// 线程1-自增 线程内i=1
-putstatic i 		// 线程1-将修改后的值存入静态变量i 静态变量i=1
-getstatic i 		// 线程1-获取静态变量i的值 线程内i=1
-iconst_1 			// 线程1-准备常量1
-isub 				// 线程1-自减 线程内i=0
-putstatic i 		// 线程1-将修改后的值存入静态变量i 静态变量i=0
-```
-
-![](D:\Java\笔记\图片\1-06【并发】\1-6.png)
-
-但多线程下这 8 行代码可能交错运行：
-
-出现负数的情况：
-
-```java
-// 假设i的初始值为0
-getstatic i 		// 线程2-获取静态变量i的值 线程内i=0
-iconst_1 			// 线程2-准备常量1
-isub 				// 线程2-自减 线程内i=-1
-getstatic i 		// 线程1-获取静态变量i的值 线程内i=0
-iconst_1 			// 线程1-准备常量1
-iadd 				// 线程1-自增 线程内i=1
-putstatic i 		// 线程1-将修改后的值存入静态变量i 静态变量i=1
-putstatic i 		// 线程2-将修改后的值存入静态变量i 静态变量i=-1
-```
-
-![](D:\Java\笔记\图片\1-06【并发】\1-6-1.png)
-
-出现正数的情况：
-
-```java
-// 假设i的初始值为0
-getstatic i 			// 线程1-获取静态变量i的值 线程内i=0
-iconst_1 				// 线程1-准备常量1
-iadd 					// 线程1-自增 线程内i=1
-getstatic i 			// 线程2-获取静态变量i的值 线程内i=0
-iconst_1 				// 线程2-准备常量1
-isub 					// 线程2-自减 线程内i=-1
-putstatic i 			// 线程2-将修改后的值存入静态变量i 静态变量i=-1
-putstatic i 			// 线程1-将修改后的值存入静态变量i 静态变量i=1
-```
-
-![](D:\Java\笔记\图片\1-06【并发】\1-6-2.png)
-
-## 3.2 synchronized
-
-为了避免临界区中的竞态条件发生，有多种手段可以达到
-
-- 阻塞式解决方案：synchronized ，Lock
-- 非阻塞式解决方案：原子变量
-
-现在讨论使用synchronized来进行解决，即俗称的对象锁，它采用互斥的方式让同一时刻至多只有一个线程持有对象锁，其他线程如果想获取这个锁就会阻塞住，这样就能保证拥有锁的线程可以安全的执行临界区内的代码，不用担心线程上下文切换。
-
-虽然 java 中互斥和同步都可以采用 synchronized 关键字来完成，但它们还是有区别的：
-
-- 互斥是保证临界区的竞态条件避免发生，同一时刻只能有一个线程执行临界区的代码。
-- 同步是由于线程执行的先后，顺序不同但是需要一个线程等待其它线程运行到某个点。
-
-synchronized语法如下：
-
-```java
-synchronized(对象) // 线程1获得锁， 那么线程2的状态是(blocked)
-{
- 临界区
-}
-```
-
-### 3.2.1 synchronized语法
-
-将之前的程序使用synchronized后计算的结果就没毛病了，当然因为加了锁，所以肯定会对性能有一定的影响。
-
-```java
-public class Demo01 {
-    static int count = 0;
-    static Object room = new Object();
-    public static void main(String[] args) throws InterruptedException {
-        Thread t1 = new Thread(() -> {
-            for (int i = 0; i < 5000; i++) {
-                synchronized(room) {
-                    count++;
-                }    
-            }
-        });
-
-        Thread t2 = new Thread(() -> {
-            for (int i = 0; i < 5000; i++) {
-                synchronized(room) {
-                    count--;
-                }
-            }
-        });
-
-        t1.start();
-        t2.start();
-        // 等待t1和t2线程运行完之后再打印count结果值
-        t1.join();
-        t2.join();
-        System.out.println("count: " + count);
-    }
-}
-```
-
-我们可以做这样的类比：
-
-- `synchronized(对象)` 中的对象，可以想象为一个房间（room），有唯一入口（门）房间只能一次进入一人进行计算，线程 t1，t2 想象成两个人。
-- 当线程 t1 执行到 `synchronized(room)` 时就好比 t1 进入了这个房间，并锁住了门拿走了钥匙，在门内执行`count++` 代码。
-- 这时候如果 t2 也运行到了 `synchronized(room)` 时，它发现门被锁住了，只能在门外等待。这就是发生了上下文切换，阻塞住了。
-- 这中间即使 t1 的 cpu 时间片不幸用完，被踢出了门外（不要错误理解为锁住了对象就能一直执行下去哦），这时门还是锁住的，t1 仍拿着钥匙，t2 线程还在阻塞状态进不来，只有下次轮到 t1 自己再次获得时间片时才能开门进入。
-- 当 t1 执行完 `synchronized{}` 块内的代码，这时候才会从 obj 房间出来并解开门上的锁，唤醒 t2 线程把钥匙给他。t2 线程这时才可以进入 obj 房间，锁住了门拿上钥匙，执行它的 `count--` 代码。
-
-synchronized实际上利用对象保证了临界区代码的原子性，临界区内的代码在外界看来是不可分割的，不会被线程切换所打断。
-
-来思考下面的问题
-
-- 如果把 `synchronized(obj)` 放在 for 循环的外面，如何理解？
-  原子性，一条count++或者count--对应的字节码是4条，5000此循环绑定在一起，那么就是这2万条指令都被加上了锁。
-- 如果 t1 `synchronized(obj1)` 而 t2 `synchronized(obj2)` 会怎样运作？
-  锁对象，他们两个分别为不同的对象加了锁，也就相当于进入了不同的房间。根本不会有任何作用。
-- 如果 t1 `synchronized(obj)` 而 t2 没有加会怎么样？如何理解？
-  锁对象，并没有任何作用。
-
-### 3.2.2 面向对象优化
-
-```java
-class Room{
-    public int count = 0;
-
-    public void increment() {
-        synchronized(this) {
-            count++;
-        }
-    }
-
-    public void decrement() {
-        synchronized(this) {
-            count--;
-        }
-    }
-
-    public int getCount() {
-        return count;
-    }
-}
-```
-
-```java
-@Slf4j
-public class Demo01 {
-
-    static Room room = new Room();
-
-    public static void main(String[] args) throws InterruptedException {
-        Thread t1 = new Thread(() -> {
-            for (int i = 0; i < 5000; i++) {
-                room.increment();
-            }
-        });
-
-        Thread t2 = new Thread(() -> {
-            for (int i = 0; i < 5000; i++) {
-                room.decrement();
-            }
-        });
-
-        t1.start();
-        t2.start();
-        // 等待t1和t2线程运行完之后再打印count结果值
-        t1.join();
-        t2.join();
-        System.out.println("count: " + room.getCount());
-    }
-}
-```
-
-### 3.2.3 方法上的synchronized
-
-> 方法被哪个对象调用，方法中的this就代表那个对象。即谁在调用，this就代表谁。
-
-可以加在两种方法上面，一种是静态方法，另一种是普通方法。
-
-* 加在普通方法上面。这种方法锁住的对象是this对象，this对象就是谁调用我就是谁。
+  * 竞争锁成功，t 线程从 `WAITING --> RUNNABLE`
+  * 竞争锁失败，t 线程从 `WAITING --> BLOCKED`
 
   ```java
-  class Test{
-      public synchronized void test() {
-  
-      }
-  }
-  //等价于
-  class Test{
-      public void test() {
-          synchronized(this) {
-  
-          }
-      }
-  }
-  ```
-
-* 加在静态方法上面。这种方法锁住的是Class对象。
-
-  ```java
-  class Test{
-      public synchronized static void test() {
-      }
-  }
-  // 等价于
-  class Test{
-      public static void test() {
-          synchronized(Test.class) {
-  
-          }
-      }
-  }
-  ```
-
- 不加 synchronzied 的方法就好比不遵守规则的人，不去老实排队（好比翻窗户进去的）
-
-### 3.2.4 线程八锁练习题
-
-其实就是考察 `synchronized` 锁住的是哪个对象
-
-* 情况1，出现的情况为`12 或 21`。
-
-  ```java
-  public class Demo02 {
+  public class TestWaitNotify {
+      final static Object obj = new Object();
       public static void main(String[] args) {
-          Number n1 = new Number();
           new Thread(() -> {
-              n1.a();
-          }).start();
+              synchronized (obj) {
+                  log.debug("执行....");
+                  try {
+                      obj.wait();
+                  } catch (InterruptedException e) {
+                      e.printStackTrace();
+                  }
+                  log.debug("其它代码...."); // 断点
+              }
+          },"t1").start();
           new Thread(() -> {
-              n1.b();
-          }).start();
-      }
-  }
-  ```
-
-  ```java
-  @Slf4j
-  class Number {
-      public synchronized void a() {
-          log.debug("1");
-      }
+              synchronized (obj) {
+                  log.debug("执行....");
+                  try {
+                      obj.wait();
+                  } catch (InterruptedException e) {
+                      e.printStackTrace();
+                  }
+                  log.debug("其它代码...."); // 断点
+              }
+          },"t2").start();
   
-      public synchronized void b() {
-          log.debug("2");
-      }
-  }
-  ```
-
-* 情况2，出现的情况为`1s后12，或 2 1s后 1`
-
-  ```java
-  public class Demo02 {
-      public static void main(String[] args) {
-          Number n1 = new Number();
-          new Thread(() -> {
-              n1.a();
-          }).start();
-          new Thread(() -> {
-              n1.b();
-          }).start();
-      }
-  }
-  ```
-
-  ```java
-  @Slf4j
-  class Number {
-      public synchronized void a() {
-          try {
-              Thread.sleep(1000);
-          } catch (InterruptedException e) {
-              e.printStackTrace();
+          sleep(0.5);
+          log.debug("唤醒 obj 上其它线程");
+          synchronized (obj) {
+              obj.notifyAll(); // 唤醒obj上所有等待线程 断点
           }
-          log.debug("1");
-      }
-  
-      public synchronized void b() {
-          log.debug("2");
       }
   }
   ```
 
-* 情况3，出现的情况为`3 1s后 12 或 23 1s后 1 或 32 1s后 1`。没有加上synchronized代表不会出现互斥请款，所以任何时候都可以执行。
+**情况 3：`RUNNABLE <--> WAITING`**
 
-  ```java
-  public class Demo02 {
-      public static void main(String[] args) {
-          Number n1 = new Number();
-          new Thread(() -> {
-              n1.a();
-          }).start();
-          new Thread(() -> {
-              n1.b();
-          }).start();
-          new Thread(() -> {
-              n1.c();
-          }).start();
-      }
-  }
-  ```
+* 当前线程调用 `t.join()` 方法时，当前线程从 `RUNNABLE --> WAITING`。注意是当前线程在`t` 线程对象的监视器上等待，因为join方法就是等待线程运行结束，所以当前线程等待t线程运行结束，当前线程变为`WATING`状态。
+* t 线程运行结束，或调用了当前线程的 `interrupt()` 时，当前线程从 `WAITING --> RUNNABLE`。
 
-  ```java
-  @Slf4j
-  class Number {
-      public synchronized void a() {
-          try {
-              Thread.sleep(1000);
-          } catch (InterruptedException e) {
-              e.printStackTrace();
-          }
-          log.debug("1");
-      }
-  
-      public synchronized void b() {
-          log.debug("2");
-      }
-  
-      public void c() {
-          log.debug("3");
-      }
-  }
-  ```
+**情况 4：`RUNNABLE <--> WAITING`**
 
-* 情况4，出现的情况为：`2 1s后 1`。因为加的锁对象都不一样，所以这两个方法不存在互斥。
+* 当前线程调用 `LockSupport.park()` 方法会让当前线程从 `RUNNABLE --> WAITING`
 
-  ```java
-  public class Demo02 {
-      public static void main(String[] args) {
-          Number n1 = new Number();
-          Number n2 = new Number();
-          new Thread(() -> {
-              n1.a();
-          }).start();
-          new Thread(() -> {
-              n2.b();
-          }).start();
-      }
-  }
-  ```
+* 调用 `LockSupport.unpark(目标线程)` 或调用了线程的 `interrupt()` ，会让目标线程从 `WAITING --> RUNNABLE`。
 
-  ```java
-  @Slf4j
-  class Number {
-      public synchronized void a() {
-          try {
-              Thread.sleep(1000);
-          } catch (InterruptedException e) {
-              e.printStackTrace();
-          }
-          log.debug("1");
-      }
-  
-      public synchronized void b() {
-          log.debug("2");
-      }
-  }
-  ```
+**情况 5：`RUNNABLE <--> TIMED_WAITING`**
 
-* 情况5，出现的情况为：`2 1s后 1`。静态方法锁住的是Class类对象，普通方法锁住的是方法调用的对象，锁住对象不一样，所以不会出现互斥。
+* t 线程用 `synchronized(obj)` 获取了对象锁后
 
-  ```java
-  public static void main(String[] args) {
-      Number n1 = new Number();
-      new Thread(()->{ n1.a(); }).start();
-      new Thread(()->{ n1.b(); }).start();
-  }
-  ```
+  调用 `obj.wait(long n)` 方法时，t 线程从 `RUNNABLE --> TIMED_WAITING`
 
-  ```java
-  @Slf4j(topic = "c.Number")
-  class Number{
-      public static synchronized void a() {
-          try {
-              Thread.sleep(1000);
-          } catch (InterruptedException e) {
-              e.printStackTrace();
-          }
-          log.debug("1");
-      }
-      public synchronized void b() {
-          log.debug("2");
-      }
-  }
-  ```
+  t 线程等待时间超过了 n 毫秒，或调用 `obj.notify()` ， `obj.notifyAll()` ， `t.interrupt()` 时
 
-* 情况6，出现的情况为：`1s后12 或 2 1s后 1`。二者都是静态方法，所以锁住的随想都是Class类对象，互斥。
+  * 竞争锁成功，t 线程从 `TIMED_WAITING --> RUNNABLE`
+  * 竞争锁失败，t 线程从 `TIMED_WAITING --> BLOCKED`
 
-  ```java
-  public static void main(String[] args) {
-      Number n1 = new Number();
-      new Thread(()->{ n1.a(); }).start();
-      new Thread(()->{ n1.b(); }).start();
-  }
-  ```
+**情况 6：`RUNNABLE <--> TIMED_WAITING`**
 
-  ```java
-  @Slf4j(topic = "c.Number")
-  class Number{
-      public static synchronized void a() {
-          try {
-              Thread.sleep(1000);
-          } catch (InterruptedException e) {
-              e.printStackTrace();
-          }
-          log.debug("1");
-      }
-      public static synchronized void b() {
-          log.debug("2");
-      }
-  }
-  ```
+* 当前线程调用 `t.join(long n)` 方法时，当前线程从 `RUNNABLE --> TIMED_WAITING`注意是当前线程在t 线程对象的监视器上等待。
+* 当前线程等待时间超过了 n 毫秒，或t 线程运行结束，或调用了当前线程的 `interrupt()` 时，当前线程从`TIMED_WAITING --> RUNNABLE`
 
-* 情况7，出现的情况为`2 1s后 1`。n1.a()方法锁住的对象是Class类对象，b方法锁住的对象为n2对象，所以二者不会互斥。
+**情况 7：`RUNNABLE <--> TIMED_WAITING`**
 
-  ```java
-  public static void main(String[] args) {
-      Number n1 = new Number();
-      Number n2 = new Number();
-      new Thread(()->{ n1.a(); }).start();
-      new Thread(()->{ n2.b(); }).start();
-  }
-  ```
+- 当前线程调用 `Thread.sleep(long n)` ，当前线程从 `RUNNABLE --> TIMED_WAITING`
+- 当前线程等待时间超过了 n 毫秒，当前线程从 `TIMED_WAITING --> RUNNABLE`
 
-  ```java
-  @Slf4j(topic = "c.Number")
-  class Number{
-      public static synchronized void a() {
-          try {
-              Thread.sleep(1000);
-          } catch (InterruptedException e) {
-              e.printStackTrace();
-          }
-          log.debug("1");
-      }
-      public synchronized void b() {
-          log.debug("2");
-      }
-  }
-  ```
+**情况 8：`RUNNABLE <--> TIMED_WAITING`**
 
-* 情况8，出现的情况为`1s后 12， 或 2 1s后 1`。二者都是静态方法，锁住的都是同一个对象，所以会出现互斥。
+- 当前线程调用 `LockSupport.parkNanos(long nanos)` 或 `LockSupport.parkUntil(long millis)` 时，当前线
+  程从 `RUNNABLE --> TIMED_WAITING`
+- 调用 `LockSupport.unpark(目标线程)` 或调用了线程的 `interrupt()` ，或是等待超时，会让目标线程从
+  `TIMED_WAITING--> RUNNABLE`
 
-  ```java
-  public static void main(String[] args) {
-      Number n1 = new Number();
-      Number n2 = new Number();
-      new Thread(()->{ n1.a(); }).start();
-      new Thread(()->{ n2.b(); }).start();
-  }
-  ```
+**情况 9：`RUNNABLE <--> BLOCKED`**
 
-  ```java
-  @Slf4j(topic = "c.Number")
-  class Number{
-      public static synchronized void a() {
-          try {
-              Thread.sleep(1000);
-          } catch (InterruptedException e) {
-              e.printStackTrace();
-          }
-          log.debug("1");
-      }
-      public static synchronized void b() {
-          log.debug("2");
-      }
-  }
-  ```
+- t 线程用 `synchronized(obj)` 获取了对象锁时如果竞争失败，从 `RUNNABLE --> BLOCKED`
+- 持 obj 锁线程的同步代码块执行完毕，会唤醒该对象上所有 BLOCKED 的线程重新竞争，如果其中 t 线程竞争
+  成功，从 `BLOCKED --> RUNNABLE` ，其它失败的线程仍然 BLOCKED
 
-## 
+**情况 10：`RUNNABLE <--> TERMINATED`**
+
+* 当前线程所有代码运行完毕，进入 `TERMINATED`
