--- a/5-扩展/5-01【数据结构和算法-1】.md
+++ b/5-扩展/5-01【数据结构和算法-1】.md
@@ -41,6 +41,26 @@ char c3[] = {'E','D','U','Y','U'};
 * 压栈：就是存元素。即，把元素存储到栈的顶端位置，栈中已有元素依次向栈底方向移动一个位置。
 * 弹栈：就是取元素。即，把栈的顶端位置元素取出，栈中已有元素依次向栈顶方向移动一个位置。
 
+## 2.1 Stack
+
+栈（Stack）是一种后进先出（LIFO：Last In First Out）的数据结构。
+
+`Stack`只有入栈和出栈的操作：
+
+- 把元素压栈：`push(E)`；
+- 把栈顶的元素“弹出”：`pop()`；
+- 取栈顶元素但不弹出：`peek()`。
+
+在Java中，我们用`Deque`可以实现`Stack`的功能：
+
+- 把元素压栈：`push(E)`/`addFirst(E)`；
+- 把栈顶的元素“弹出”：`pop()`/`removeFirst()`；
+- 取栈顶元素但不弹出：`peek()`/`peekFirst()`。
+
+为什么Java的集合类没有单独的`Stack`接口呢？因为有个遗留类名字就叫`Stack`，出于兼容性考虑，所以没办法创建`Stack`接口，只能用`Deque`接口来“模拟”一个`Stack`了。
+
+当我们把`Deque`作为`Stack`使用时，注意只调用`push()`/`pop()`/`peek()`方法，不要调用`addFirst()`/`removeFirst()`/`peekFirst()`方法，这样代码更加清晰。
+
 
 # 第三章 队列
 
@@ -52,6 +72,163 @@ char c3[] = {'E','D','U','Y','U'};
 * 队列的入口、出口各占一侧。例如，下图中的左侧为入口，右侧为出口。
 
 ![](D:\Java\笔记\图片\5-01【数据结构】\1-1队列图.bmp)
+
+## 3.1 Queue接口
+
+队列（`Queue`）是一种经常使用的集合。`Queue`实际上是实现了一个先进先出（FIFO：First In First Out）的有序表。它和`List`的区别在于，`List`可以在任意位置添加和删除元素，而`Queue`只有两个操作：
+
+- 把元素添加到队列末尾；
+- 从队列头部取出元素。
+
+在Java的标准库中，队列接口`Queue`定义了以下几个方法：
+
+- `int size()`：获取队列长度；
+- `boolean add(E)`/`boolean offer(E)`：添加元素到队尾；
+- `E remove()`/`E poll()`：获取队首元素并从队列中删除；
+- `E element()`/`E peek()`：获取队首元素但并不从队列中删除。
+
+对于具体的实现类，有的Queue有最大队列长度限制，有的Queue没有。注意到添加、删除和获取队列元素总是有两个方法，这是因为在添加或获取元素失败时，这两个方法的行为是不同的。我们用一个表格总结如下：
+
+|                    | throw Exception | 返回false或null    |
+| :----------------- | :-------------- | ------------------ |
+| 添加元素到队尾     | add(E e)        | boolean offer(E e) |
+| 取队首元素并删除   | E remove()      | E poll()           |
+| 取队首元素但不删除 | E element()     | E peek()           |
+
+注意：不要把`null`添加到队列中，否则`poll()`方法返回`null`时，很难确定是取到了`null`元素还是队列为空。
+
+## 3.2 PriorityQueue
+
+优先队列：`PriorityQueue`。
+
+`PriorityQueue`和`Queue`的区别在于，它的出队顺序与元素的优先级有关，对`PriorityQueue`调用`remove()`或`poll()`方法，返回的总是优先级最高的元素。
+
+要使用`PriorityQueue`，我们就必须给每个元素定义“优先级”。我们以实际代码为例，先看看`PriorityQueue`的行为：
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Queue<String> q = new PriorityQueue<>();
+        // 添加3个元素到队列:
+        q.offer("apple");
+        q.offer("pear");
+        q.offer("banana");
+        System.out.println(q.poll()); // apple
+        System.out.println(q.poll()); // banana
+        System.out.println(q.poll()); // pear
+        System.out.println(q.poll()); // null,因为队列为空
+    }
+}
+```
+
+我们放入的顺序是`"apple"`、`"pear"`、`"banana"`，但是取出的顺序却是`"apple"`、`"banana"`、`"pear"`，这是因为从字符串的排序看，`"apple"`排在最前面，`"pear"`排在最后面。
+
+因此，放入`PriorityQueue`的元素，必须实现`Comparable`接口，`PriorityQueue`会根据元素的排序顺序决定出队的优先级。
+
+如果我们要放入的元素并没有实现`Comparable`接口怎么办？`PriorityQueue`允许我们提供一个`Comparator`对象来判断两个元素的顺序。我们以银行排队业务为例，实现一个`PriorityQueue`：
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Queue<User> q = new PriorityQueue<>(new UserComparator());
+        // 添加3个元素到队列:
+        q.offer(new User("Bob", "A1"));
+        q.offer(new User("Alice", "A2"));
+        q.offer(new User("Boss", "V1"));
+        System.out.println(q.poll()); // Boss/V1
+        System.out.println(q.poll()); // Bob/A1
+        System.out.println(q.poll()); // Alice/A2
+        System.out.println(q.poll()); // null,因为队列为空
+    }
+}
+```
+
+```java
+class UserComparator implements Comparator<User> {
+    public int compare(User u1, User u2) {
+        if (u1.number.charAt(0) == u2.number.charAt(0)) {
+            // 如果两人的号都是A开头或者都是V开头,比较号的大小:
+            return u1.number.compareTo(u2.number);
+        }
+        if (u1.number.charAt(0) == 'V') {
+            // u1的号码是V开头,优先级高:
+            return -1;
+        } else {
+            return 1;
+        }
+    }
+}
+```
+
+## 3.3 Deque
+
+我们知道，`Queue`是队列，只能一头进，另一头出。
+
+如果把条件放松一下，允许两头都进，两头都出，这种队列叫双端队列（Double Ended Queue），学名`Deque`。
+
+Java集合提供了接口`Deque`来实现一个双端队列，它的功能是：
+
+- 既可以添加到队尾，也可以添加到队首；
+- 既可以从队首获取，又可以从队尾获取。
+
+我们来比较一下`Queue`和`Deque`出队和入队的方法：
+
+|                    | Queue                  | Deque                           |
+| :----------------- | :--------------------- | ------------------------------- |
+| 添加元素到队尾     | add(E e) / offer(E e)  | addLast(E e) / offerLast(E e)   |
+| 取队首元素并删除   | E remove() / E poll()  | E removeFirst() / E pollFirst() |
+| 取队首元素但不删除 | E element() / E peek() | E getFirst() / E peekFirst()    |
+| 添加元素到队首     | 无                     | addFirst(E e) / offerFirst(E e) |
+| 取队尾元素并删除   | 无                     | E removeLast() / E pollLast()   |
+| 取队尾元素但不删除 | 无                     | E getLast() / E peekLast()      |
+
+对于添加元素到队尾的操作，`Queue`提供了`add()`/`offer()`方法，而`Deque`提供了`addLast()`/`offerLast()`方法。添加元素到队首、取队尾元素的操作在`Queue`中不存在，在`Deque`中由`addFirst()`/`removeLast()`等方法提供。
+
+注意到`Deque`接口实际上扩展自`Queue`：
+
+```java
+public interface Deque<E> extends Queue<E> {
+    ...
+}
+```
+
+因此，`Queue`提供的`add()`/`offer()`方法在`Deque`中也可以使用，但是，使用`Deque`，最好不要调用`offer()`，而是调用`offerLast()`：
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Deque<String> deque = new LinkedList<>();
+        deque.offerLast("A"); // A
+        deque.offerLast("B"); // A <- B
+        deque.offerFirst("C"); // C <- A <- B
+        System.out.println(deque.pollFirst()); // C, 剩下A <- B
+        System.out.println(deque.pollLast()); // B, 剩下A
+        System.out.println(deque.pollFirst()); // A
+        System.out.println(deque.pollFirst()); // null
+    }
+}
+```
+
+如果直接写`deque.offer()`，我们就需要思考，`offer()`实际上是`offerLast()`，我们明确地写上`offerLast()`，不需要思考就能一眼看出这是添加到队尾。
+
+因此，使用`Deque`，推荐总是明确调用`offerLast()`/`offerFirst()`或者`pollFirst()`/`pollLast()`方法。
+
+`Deque`是一个接口，它的实现类有`ArrayDeque`和`LinkedList`。
+
+我们发现`LinkedList`真是一个全能选手，它即是`List`，又是`Queue`，还是`Deque`。但是我们在使用的时候，总是用特定的接口来引用它，这是因为持有接口说明代码的抽象层次更高，而且接口本身定义的方法代表了特定的用途。
+
+```java
+// 不推荐的写法:
+LinkedList<String> d1 = new LinkedList<>();
+d1.offerLast("z");
+// 推荐的写法：
+Deque<String> d2 = new LinkedList<>();
+d2.offerLast("z");
+```
+
+可见面向抽象编程的一个原则就是：尽量持有接口，而不是具体的实现类。
+
+
 
 
 #  第四章 链表
@@ -327,6 +504,27 @@ public int treeDepth2(TreeNode root) {
     return res;
 }
 ```
+
+### 5.1.2 树的遍历
+
+中序遍历：左根右，inorderTraversal。
+
+```java
+public static void inorderTraversal(TreeNode root) {
+    Deque<TreeNode> stack = new LinkedList<TreeNode>();
+    while (!stack.isEmpty() || root != null) {
+        while (root != null) {
+            stack.push(root);
+            root = root.left;
+        }
+        root = stack.pop();
+        System.out.println(root.val);
+        root = root.right;
+    }
+}
+```
+
+前序遍历 (preorder traversal) - 中序遍历 (inorder traversal) - 后序遍历 (postorder traversal)
 
 ## 5.2 红黑树
 
