--- a/5-扩展/5-02【数据结构和算法-十大排序】.md
+++ b/5-扩展/5-02【数据结构和算法-十大排序】.md
@@ -359,8 +359,9 @@ int test() {
 - n：数据规模
 - k："桶"的个数
 - In-place：占用常数内存，不占用额外内存
-- Out-place：占用额外内存
-- 稳定性：排序后 2 个相等键值的顺序和排序之前它们的顺序相同
+- Out-place：占用额外内存。当数据量比较大的时候，需要借助外层来进行排序，一般指占用空间比较大的排序，也就是空间复杂度比较大的排序方法
+- 稳定排序：排序前后两个相等的数相对位置不变，则算法稳定
+- 非稳定排序：排序前后两个相等的数相对位置发生了变化，则算法不稳定
 
 ## 2.1 冒泡排序
 
@@ -385,8 +386,9 @@ int test() {
 
 ```java
 public void bubbleSort(int[] arr) {
-    for (int i = 0; i < arr.length; i++) {
-        for (int j = 0; j < arr.length - 1 - i; j++) {
+    int length = array.length;
+    for (int i = 0; i < length; i++) {
+        for (int j = 0; j < length - 1 - i; j++) {
             if (arr[j] > arr[j + 1] ) {
                 int tmp = arr[j];
                 arr[j] = arr[j + 1];
@@ -412,7 +414,7 @@ public void bubbleSort(int[] arr) {
 ![img](D:\Java\笔记\图片\5-02【算法】\2-2selectionSort.gif)
 
 ```java
-public static void SelectionSort(int[] array) {
+public static void selectionSort(int[] array) {
     int length = array.length;
     for (int i = 0; i < length - 1; i++) {
         int min = i;
@@ -441,33 +443,22 @@ public static void SelectionSort(int[] array) {
 ![img](D:\Java\笔记\图片\5-02【算法】\2-3insertionSort.gif)
 
 ```java
-public class InsertSort implements IArraySort {
+public static void insertSort(int[] arr) {
+    for (int i = 1; i < arr.length; i++) {
+        // 记录需要插入的数字
+        int tmp = arr[i];
 
-    @Override
-    public int[] sort(int[] sourceArray) throws Exception {
-        // 对 arr 进行拷贝，不改变参数内容
-        int[] arr = Arrays.copyOf(sourceArray, sourceArray.length);
-
-        // 从下标为1的元素开始选择合适的位置插入，因为下标为0的只有一个元素，默认是有序的
-        for (int i = 1; i < arr.length; i++) {
-
-            // 记录要插入的数据
-            int tmp = arr[i];
-
-            // 从已经排序的序列最右边的开始比较，找到比其小的数
-            int j = i;
-            while (j > 0 && tmp < arr[j - 1]) {
-                arr[j] = arr[j - 1];
-                j--;
-            }
-
-            // 存在比其小的数，插入
-            if (j != i) {
-                arr[j] = tmp;
-            }
-
+        int j = i;
+        // 从已经排序的序列最右边的开始比较，找到比其小的数
+        while (j > 0 && tmp < arr[j - 1]) {
+            arr[j] = arr[j - 1];
+            j--;
         }
-        return arr;
+
+        // 存在比其小的数，插入
+        if (j != i) {
+            arr[j] = tmp;
+        }
     }
 }
 ```
@@ -483,20 +474,25 @@ public class InsertSort implements IArraySort {
 
 希尔排序的基本思想是：先将整个待排序的记录序列分割成为若干子序列分别进行直接插入排序，待整个序列中的记录"基本有序"时，再对全体记录进行依次直接插入排序。
 
-### 5.1 算法步骤
+希尔排序需要定义一个增量，这里选择增量为`gap=length/2`，缩小增量以`gap=gap/2`的方式，这个增量可以用一个序列来表示，`{n/2,(n/2)/2…1}`，称为增量序列，这个增量是比较常用的，也是希尔建议的增量，称为希尔增量。
 
-选择一个增量序列 t1，t2，……，tk，其中 ti > tj, tk = 1；
+1. 对于一个无序序列`{8，9，1，7，2，3，5，4，6，0}`来说，我们初始增量为`gap=length/2=5`，所以这个序列要被分为5组，分别是`{8，3}，{9，5}，{1，4}，{7，6}，{2，0}`，对这5组分别进行直接插入排序，则小的元素就被调换到了前面，然后再缩小增量gap=gap/2=2。
 
-按增量序列个数 k，对序列进行 k 趟排序；
+   ![](D:\Java\笔记\图片\5-02【算法】\2-4shellSort1.png)
 
-每趟排序，根据对应的增量 ti，将待排序列分割成若干长度为 m 的子序列，分别对各子表进行直接插入排序。仅增量因子为 1 时，整个序列作为一个表来处理，表长度即为整个序列的长度。
+2. 上面缩小完增量后，序列再次被分为2组，分别是`{3，1，0，9，7}`和`{5，6，8，4，2}`，再对这两组进行直接插入排序，那么序列就更加有序了。
 
-![img](https://www.runoob.com/wp-content/uploads/2019/03/Sorting_shellsort_anim.gif)
+   ![](D:\Java\笔记\图片\5-02【算法】\2-4shellSort2.png)
+
+3. 然后再缩小增量`gap=gap/2=1`，这时整个序列就被分为一组即`{0，2，1，4，3，5，7，6，9，8}`，最后再进行调整，就得到了有序序列`{0，1，2，3，4，5，6，7，8，9}`。
+
+   ![](D:\Java\笔记\图片\5-02【算法】\2-4shellSort3.png)
 
 ```java
 public static void shellSort(int[] arr) {
     int length = arr.length;
     int temp;
+    
     for (int step = length / 2; step >= 1; step /= 2) {
         for (int i = step; i < length; i++) {
             temp = arr[i];
