--- a/1-Java基础/1-19【JVM类加载、编译运行处理】.md
+++ b/1-Java基础/1-19【JVM类加载、编译运行处理】.md
@@ -1409,7 +1409,7 @@ JVM 将执行状态分成了 5 个层次：
 - 解释器是将字节码解释为针对所有平台都通用的机器码
 - JIT 会根据平台类型，生成平台特定的机器码
 
-对于大部分的不常用的代码，我们无需耗费时间将其编译成机器码，而是采取解释执行的方式运行；另一方面，对于仅占据小部分的热点代码，我们则可以将其编译成机器码，以达到理想的运行速度。 执行效率上简单比较一下 Interpreter < C1 < C2，总的目标是发现热点代码（hotspot名称的由 来），并优化这些热点代码
+对于大部分的不常用的代码，我们无需耗费时间将其编译成机器码，而是采取解释执行的方式运行；另一方面，对于仅占据小部分的热点代码，我们则可以将其编译成机器码，以达到理想的运行速度。 执行效率上简单比较一下 Interpreter < C1 < C2，总的目标是发现热点代码（hotspot名称的由来），并优化这些热点代码
 
 ### 4.1.2 逃逸分析
 
@@ -1434,6 +1434,46 @@ JVM 将执行状态分成了 5 个层次：
 我们知道线程同步锁是非常牺牲性能的，当编译器确定当前对象只有当前线程使用，那么就会移除该对象的同步锁
 
 例如，StringBuffer 和 Vector 都是用 synchronized 修饰线程安全的，但大部分情况下，它们都只是在当前线程中用到，这样编译器就会优化移除掉这些锁操作
+
+JMH测试一下：
+
+```java
+@Fork(1)
+@BenchmarkMode(Mode.AverageTime)
+@Warmup(iterations=3)
+@Measurement(iterations=5)
+@OutputTimeUnit(TimeUnit.NANOSECONDS)
+public class MyBenchmark {
+    static int x = 0;
+    @Benchmark
+    public void a() throws Exception {
+        x++;
+    }
+    @Benchmark
+    public void b() throws Exception {
+        Object o = new Object();
+        synchronized (o) {
+            x++;
+        }
+    }
+}
+```
+
+`java -jar benchmarks.jar`，时间几乎没有差别。
+
+```java
+Benchmark Mode Samples Score Score error Units 
+c.i.MyBenchmark.a avgt 5 1.542 0.056 ns/op 
+c.i.MyBenchmark.b avgt 5 1.518 0.091 ns/op 
+```
+
+`java -XX:-EliminateLocks -jar benchmarks.jar`，时间相差16倍。
+
+```java
+Benchmark Mode Samples Score Score error Units 
+c.i.MyBenchmark.a avgt 5 1.507 0.108 ns/op 
+c.i.MyBenchmark.b avgt 5 16.976 1.572 ns/op 
+```
 
 锁消除的 JVM 参数如下：
 
